# data-golf-api

./: LICENSE  README.md  client.html  pyproject.toml
.github/workflows/: python-app.yml
data_golf/: __init__.py  client.py  config.py  http.py  http_client.py  request_helpers.py
data_golf/api/: betting.py  general.py  historical.py  live_prediction.py  model.py  prediction.py
docs/: data_golf.html  index.html  search.js
docs/data_golf/: api.html  client.html  config.html  http.html  request_helpers.html
docs/data_golf/api/: general.html  model.html
tests/: conftest.py  test_client.py
tests/api/: test_betting.py  test_general.py  test_model.py  test_prediction.py
