[tool.poetry]
name = "data_golf"
version = "0.3.0"
description = "API Wrapper for Data golf endpoints"
authors = ["Corey Schaf <cschaf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "*"

[tool.poetry.group.dev.dependencies]
pytest="^7.1.3"
pytest-mock = "*"
mypy = "*"
ruff = "*"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
